syntax = "proto3";

package auth;

option go_package = "./pkg/pb";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
}

// Register
message RegisterRequest {
  string phone_number = 1;
  string phone_number_verification_code = 2;
  string name = 3;
  string email_address = 4;
  string date_of_birth = 5;
  string password = 6;
  bool kyc_verified = 7;
  float credit_score = 8;
  bool is_finance_worthy = 9;
  string work_place = 10;
  string nin = 11;
  string employer_name = 12;
  float salary_scale = 13;
}

message RegisterResponse {
  int64 status = 1;
  string error = 2;
}

// Login
message LoginRequest {
  string email_address = 1;
  string password = 2;
  string phone_number = 3;
}

message LoginResponse {
  int64 status = 1;
  string error = 2;
  string token = 3;
  string userId = 4;
  string name = 5;
  string email = 6;
  string phone = 7;
  string roleId = 8;
}

// Validate
message ValidateRequest { string token = 1; }

message ValidateResponse {
  int64 status = 1;
  string error = 2;
  int64 userId = 3;
}